Created CSS Properties that focused on positioning and such.

--- a/index.html
+++ b/index.html
@@ -11,61 +11,84 @@
   </head>
   <body>
 
-   <section class="Section1">
+   <section class="Section Section1">
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Desktop 00</h2>
+        <Section>
+        <p class="card-text CTS11">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS12">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS13">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Card title</h2>
+        <Section>
+        <p class="card-text CTS111">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS122">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS133">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Card title</h2>
+        <Section>
+        <p class="card-text CTS1111">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS1222">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS1333">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
    </section>
-
    
-   <section class="Section2">
+   <section class="Section Section2">
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Card title</h2>
+        <Section>
+        <p class="card-text CTS2111">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2222">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2333">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Card title</h2>
+        <Section>
+        <p class="card-text CTS2111">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2222">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2333">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
 
     <div class="card" style="width: 18rem;">
-      <img src="..." class="card-img-top" alt="...">
+      <img src="images/#" class="card-img-top" alt="...">
       <div class="card-body">
-        <h5 class="card-title">Card title</h5>
-        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <h2 class="card-title">Card title</h2>
+        <Section>
+        <p class="card-text CTS2111">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2222">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+        <p class="card-text CTS2333">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
         <a href="#" class="btn btn-primary">Go somewhere</a>
+        </Section>
       </div>
     </div>
    </section>
